...
            android:id="@+id/edit_teams_recycler_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scrollbars="vertical" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_team_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintRight_toRightOf="parent"
...
